[gd_scene load_steps=11 format=3 uid="uid://bfe46yeks6deo"]

[ext_resource type="Theme" uid="uid://cmkvf640kg8dk" path="res://Themes/Budget_page.tres" id="1_ay7gi"]
[ext_resource type="Script" path="res://Scene/budget_page.gd" id="2_pyfu3"]
[ext_resource type="StyleBox" uid="uid://cyb7nofqq2yaf" path="res://Themes/Panel/budget_page.tres" id="2_tq0p3"]
[ext_resource type="Texture2D" uid="uid://c1es8kofius06" path="res://Assets/UI/Exclamation.png" id="4_quus5"]

[sub_resource type="ImageTexture" id="ImageTexture_j3iri"]

[sub_resource type="AtlasTexture" id="AtlasTexture_idd87"]
atlas = ExtResource("4_quus5")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_e6j1w"]
atlas = ExtResource("4_quus5")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_endjo"]
atlas = ExtResource("4_quus5")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wr1g4"]
atlas = ExtResource("4_quus5")
region = Rect2(96, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_y0rpp"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_idd87")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e6j1w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_endjo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wr1g4")
}],
"loop": true,
"name": &"default",
"speed": 6.0
}]

[node name="Budget_Page" type="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_ay7gi")
theme_override_styles/panel = ExtResource("2_tq0p3")
script = ExtResource("2_pyfu3")

[node name="InfoBox" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -452.0
offset_top = -320.0
offset_right = 484.0
offset_bottom = -32.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/h_separation = 20
columns = 2

[node name="Income" type="Label" parent="InfoBox"]
layout_mode = 2
size_flags_vertical = 3
text = "Income
"

[node name="IncValue" type="Label" parent="InfoBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "0"

[node name="Expenses" type="Label" parent="InfoBox"]
layout_mode = 2
size_flags_vertical = 3
text = "Expenses"

[node name="ExpValue" type="Label" parent="InfoBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "0"

[node name="Savings" type="Label" parent="InfoBox"]
layout_mode = 2
size_flags_vertical = 3
text = "Savings"

[node name="SavValue" type="Label" parent="InfoBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "0
"

[node name="ControlBox" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -388.0
offset_top = 144.0
offset_right = 388.0
offset_bottom = 429.0
grow_horizontal = 2

[node name="Button" type="Button" parent="ControlBox"]
layout_mode = 2
size_flags_vertical = 0
text = "Add"

[node name="Button2" type="Button" parent="ControlBox"]
layout_mode = 2
size_flags_vertical = 4
text = "Back"

[node name="EntryBox" type="ItemList" parent="."]
clip_contents = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -516.0
offset_top = -604.0
offset_right = 54.0
offset_bottom = 605.0
grow_horizontal = 2
grow_vertical = 2
item_count = 1
icon_mode = 0
fixed_icon_size = Vector2i(1, 1)
item_0/text = ""
item_0/icon = SubResource("ImageTexture_j3iri")

[node name="EntryBox2" type="ItemList" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 68.0
offset_top = -604.0
offset_right = 516.0
offset_bottom = 605.0
grow_horizontal = 2
grow_vertical = 2
allow_reselect = true

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -444.0
offset_top = 32.0
offset_right = 436.0
offset_bottom = 109.0
grow_horizontal = 2

[node name="Save Timer" type="Timer" parent="."]
wait_time = 0.072

[node name="AcceptDialog" type="AcceptDialog" parent="."]
title = "Change Title"
size = Vector2i(800, 175)
dialog_text = "This Title Already Exists"

[node name="Ids" type="ItemList" parent="."]
visible = false
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Control" type="Control" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -72.0
offset_top = 48.0
offset_right = -32.0
offset_bottom = 88.0
grow_horizontal = 0

[node name="Exclamation Title" type="AnimatedSprite2D" parent="Control"]
sprite_frames = SubResource("SpriteFrames_y0rpp")

[connection signal="pressed" from="ControlBox/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="ControlBox/Button2" to="." method="_on_button_2_pressed"]
[connection signal="item_clicked" from="EntryBox" to="." method="_on_entry_box_item_clicked"]
[connection signal="mouse_entered" from="EntryBox" to="." method="_on_Control_mouse_entered"]
[connection signal="timeout" from="Save Timer" to="." method="_on_save_timer_timeout"]
[connection signal="confirmed" from="AcceptDialog" to="." method="_on_accept_dialog_confirmed"]
